...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textInputLayoutEmail"

        > <!-- app:passwordToggleEnabled="true" // Pentru a pune iconita de arata parola! -->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/inputPass"
            android:inputType="textPassword"
...

    <!-- Link recuperare/resetare parola -->
    <TextView
        android:id="@+id/login_textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login_button"
        android:layout_below="@+id/login_textViewCreateAccount"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/LoginForgotPassword"
        android:textAppearance="@style/TextAppearance.AppCompat"
...
