...
    <!-- Mesaje de exceptie -->
    <string name="error_empty">Error: please fill the input %1$s</string>
    <string name="error_length">Error: No more than 20 characters for %1$s</string>
    <string name="error_weak_password">Error: at least %1$s characters</string>
    <string name="error_firebase_invalid_email">Error: check your E-mail format</string>
    <string name="error_password_match">Error: passwords don\'t match</string>
    <string name="error_firebase_account_not_found">Incorrect email address</string>
    <string name="error_firebase_wrong_password">Invalid password</string>
    <string name="error_firebase_user_exists">Error: user already exists</string>
    <string name="error_firebase_reset_mail_sent">We have sent you instructions to reset your password!</string>
    <string name="error_firebase_reset_mail_fail">Failed to send reset email!</string>

    <string name="hint_nickname">Nickname</string>
    <string name="hint_first_name">First name</string>
...

    <string name="error_empty_email">Error: check your e-mail format</string>
    <string name="error_empty_password">Error: check your e-mail format</string>


    <!-- Activitatea de Login -->
    <string name="LoginButtonAccept">LOGIN to my account</string>
    <string name="LoginRegister">New here ? Create a new account.</string>
    <string name="LoginForgotPassword">Forgot password ?</string>

    <!-- Activitatea de Inregistrare -->
    <string name="RegisterPass2RAW">Reapeat the password:</string>
    <string name="RegisterAgreements">Check if you accept terms and conditions</string>
    <string name="RegisterAgreementsTitle">Terms and conditions</string>
    <string name="RegisterAgreementsDetails" formatted="false">
        <![CDATA[
        <center>Agreements and details </center>
        <br>
        <font color=\'#28b5f5\'>
...
        <br><strong>3)</strong>To finish an important part of my life.
        <br>Details about the data I will collect:
        <br>- E-mails : that will never be used in any bad way.
        <br>- Password: that can not be read by me ( the programmer ) being secured by google framework (Firebase).
        <br>- Phone mode: so that the application can know how to addapt in the future for all phone models.
        <br>
        <br>Choosing:<strong>I agree with the terms and conditions</strong>
        <br>You can register to our system.
        <br>Choosing:<strong>I don\'t agree with the terms and conditions</strong>
        <br>You ca not register to our system and you will be send back to the login activity/page where you will choose what to do next.
        The system will not register data or something else until the agreements is checked.
        ]]>
    </string>
    <string name="RegisterAgreementsDetailsYES">I agree with the terms and conditions</string>
    <string name="RegisterAgreementsDetailsNO">I don\'t agree with the terms and conditions</string>
    <string name="RegisterButtonRegister">Register to our system</string>

    <!-- Activitatea de Recuperare/Resetare parola -->
    <string name="ForgotPassBtn">Reset password</string>
    <string name="ForgotPassDetails" formatted="false">
        <![CDATA[
        <strong>Indications reseting the password</strong>
...
