<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.TextInputLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="322dp"
    android:layout_height="wrap_content"
    android:id="@+id/login_textInputLayoutEmail"
    >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/inputEmail"
        android:textStyle="bold"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
</android.support.design.widget.TextInputLayout>